--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">JwtAuth</string>
+    <string name="app_name">SmallDelivery</string>
     <string name="btn_try_again">Try again</string>
 </resources>
